# DataScience

./: README.md
logistic_regression/mylogistic/: mylogistic.py  requirements.txt
simulation/: pyproject.toml  warehouse_simulation.py
